[gd_scene load_steps=20 format=3 uid="uid://r6of1qds6lyu"]

[ext_resource type="Script" uid="uid://c1ug0htq8fvp8" path="res://Assets/Scenes/Enemies Scene/Golem Scene/golem.gd" id="1_ymxtc"]
[ext_resource type="Texture2D" uid="uid://b54gbtsaf8whn" path="res://Assets/sprites/enemies/Golem/idle Golem.png" id="2_016tv"]
[ext_resource type="Texture2D" uid="uid://6fauialhm0jy" path="res://Assets/sprites/enemies/Golem/throw golem.png" id="3_brxpk"]
[ext_resource type="Texture2D" uid="uid://cf1oidoehoqbx" path="res://Assets/sprites/enemies/Golem/walk golem.png" id="4_jvu7w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ymxtc"]
atlas = ExtResource("2_016tv")
region = Rect2(0, 0, 170, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_016tv"]
atlas = ExtResource("2_016tv")
region = Rect2(0, 156, 170, 156)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw23s"]
atlas = ExtResource("3_brxpk")
region = Rect2(15, 17, 162, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_qehng"]
atlas = ExtResource("3_brxpk")
region = Rect2(339, 17, 162, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_421lt"]
atlas = ExtResource("3_brxpk")
region = Rect2(15, 184, 162, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckww7"]
atlas = ExtResource("3_brxpk")
region = Rect2(177, 17, 162, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4atw"]
atlas = ExtResource("4_jvu7w")
region = Rect2(8, 18, 158, 155)

[sub_resource type="AtlasTexture" id="AtlasTexture_832ti"]
atlas = ExtResource("4_jvu7w")
region = Rect2(324, 173, 158, 155)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vjuy"]
atlas = ExtResource("4_jvu7w")
region = Rect2(324, 18, 158, 155)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ncx"]
atlas = ExtResource("4_jvu7w")
region = Rect2(166, 173, 158, 155)

[sub_resource type="AtlasTexture" id="AtlasTexture_u255d"]
atlas = ExtResource("4_jvu7w")
region = Rect2(166, 18, 158, 155)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxdwf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymxtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_016tv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw23s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qehng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_421lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckww7")
}],
"loop": false,
"name": &"throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4atw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_832ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vjuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ncx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u255d")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
extents = Vector2(48, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_r46aw"]
radius = 180.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
extents = Vector2(54, 52)

[node name="Golem" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 11
script = ExtResource("1_ymxtc")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dxdwf")
animation = &"idle"
frame_progress = 0.48903066

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_body")

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_r46aw")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 16
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_hitbox")

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2(36, 40)
exclude_parent = false
target_position = Vector2(0, 64)
collision_mask = 7
collide_with_areas = true

[node name="WallCheck" type="RayCast2D" parent="."]
position = Vector2(40, -10)
exclude_parent = false
target_position = Vector2(48, 0)
collision_mask = 7
